# INFOMR-Project

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
DescriptorDatabase/: m0.csv  m1.csv  m10.csv  m100.csv  m1000.csv  m1001.csv  m1002.csv  m1003.csv  m1004.csv  m1005.csv  m1006.csv  m1007.csv  m1008.csv  m1009.csv  m101.csv  m1010.csv  m1011.csv  m1012.csv  m1013.csv  m1014.csv  m1015.csv  m1016.csv  m1017.csv  m1018.csv  m1019.csv  m102.csv  m1020.csv  m1021.csv  m1022.csv  m1023.csv  m1024.csv  m1025.csv  m1026.csv  m1027.csv  m1028.csv  m1029.csv  m103.csv  m1030.csv  m1031.csv  m1032.csv  (+1757 more)
Evaluation/: compute_performance.py  compute_statistics.py  compute_statistics_per_class.py  compute_tiers.py
Evaluation/Standardization/: compute_statistics.py  plot_feature_distributions.py
FeatureDatabase/: m0.csv  m1.csv  m10.csv  m100.csv  m1000.csv  m1001.csv  m1002.csv  m1003.csv  m1004.csv  m1005.csv  m1006.csv  m1007.csv  m1008.csv  m1009.csv  m101.csv  m1010.csv  m1011.csv  m1012.csv  m1013.csv  m1014.csv  m1015.csv  m1016.csv  m1017.csv  m1018.csv  m1019.csv  m102.csv  m1020.csv  m1021.csv  m1022.csv  m1023.csv  m1024.csv  m1025.csv  m1026.csv  m1027.csv  m1028.csv  m1029.csv  m103.csv  m1030.csv  m1031.csv  m1032.csv  (+1774 more)
Resources/: Black.frag  Box.ply  Color.frag  IcosphereTriangulated.ply  MainWindow.ui  Model.frag  Model.vert  Plane.frag  Pyramid.ply  RotatedCuboid.ply  RotatedCuboidHighPoly.ply  RotatedCuboidSuperDuperHighPoly.ply  resources.qrc
Resources/Objects/: Cone.ply  Cylinder.ply  Tetrahedron.ply  ThreeMeshes.ply
Scripts/: Remesh.mlx  SubdivRemesh.mlx  alignment_hist.py  barycenter_hist.py  feature_vector_hist.py  scale_hist.py
Scripts/plugins/: decorate_background.exp  decorate_base.exp  decorate_raster_proj.exp  decorate_shadow.exp  edit_align.exp  edit_manipulators.exp  edit_measure.exp  edit_mutualcorrs.exp  edit_paint.exp  edit_pickpoints.exp  edit_point.exp  edit_quality.exp  edit_referencing.exp  edit_sample.exp  edit_select.exp  filter_ao.exp  filter_camera.exp  filter_clean.exp  filter_color_projection.exp  filter_colorproc.exp  filter_create.exp  filter_createiso.exp  filter_csg.exp  filter_dirt.exp  filter_fractal.exp  filter_func.exp  filter_geodesic.exp  filter_globalregistration.exp  filter_img_patch_param.exp  filter_isoparametrization.exp  filter_layer.exp  filter_measure.exp  filter_meshing.exp  filter_mls.exp  filter_mutualglobal.exp  filter_mutualinfo.exp  filter_plymc.exp  filter_qhull.exp  filter_quality.exp  filter_sample.exp  (+26 more)
Source/: CMakeLists.txt  Camera.cpp  Context.cpp  Context.h  Database.cpp  Database.h  DatabaseView.cpp  DatabaseView.h  Feature.cpp  Feature.h  FeatureExtraction.cpp  FeatureExtraction.h  FeatureView.cpp  FeatureView.h  Main.cpp  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  ModelAnalytics.cpp  ModelAnalytics.h  ModelDescriptor.cpp  ModelDescriptor.h  ModelLoader.cpp  ModelLoader.h  ModelProcessing.cpp  ModelProcessing.h  ModelSaver.cpp  ModelSaver.h  ModelUtil.cpp  ModelUtil.h  ModelViewer.cpp  ModelViewer.h  Normalizer.cpp  Normalizer.h  OffscreenContext.cpp  OffscreenContext.h  PSBLoader.cpp  PSBLoader.h  QueryManager.cpp  (+5 more)
Source/Evaluation/: DatabaseAnalytics.cpp  DatabaseAnalytics.h  Evaluation.cpp  Evaluation.h
Source/Graphics/: Bounds.cpp  Bounds.h  BufferObject.cpp  BufferObject.h  Image.cpp  Image.h  PointRenderer.cpp  Projector.cpp  (+4 more)
(+12 files in other folders)
